--- a/SeleniumWeb.Test/SeleniumWeb.Test.csproj
+++ b/SeleniumWeb.Test/SeleniumWeb.Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="79.0.3945.3600" />
   </ItemGroup>
 
 </Project>
