--- a/SeleniumWeb.Test/SeleniumWeb.Test.csproj
+++ b/SeleniumWeb.Test/SeleniumWeb.Test.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Base.cs" />
+    <Compile Remove="Hooks.cs" />
+    <Compile Remove="SampleFunctionalTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
